--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,36 +1,41 @@
-apply plugin: 'com.android.application'
-
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-kapt'
+plugins {
+    id("com.google.devtools.ksp")
+    id("com.android.application")
+    id("kotlin-android")
+}
 
 android {
     compileSdk = 34
     defaultConfig {
         applicationId = "com.example.cryptoapp"
-        minSdk = 19
+        minSdk = 26
         targetSdk = 34
         versionCode = 1
         versionName = "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     buildFeatures {
         viewBinding true
     }
+
     namespace 'com.example.cryptoapp'
 }
 
 dependencies {
+    ksp("androidx.room:room-compiler:2.6.1")
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
@@ -48,7 +53,7 @@ dependencies {
     def room_version = "2.4.0"
 
     implementation("androidx.room:room-runtime:$room_version")
-    kapt("androidx.room:room-compiler:$room_version")
+    ksp("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
 
     implementation 'com.squareup.picasso:picasso:2.71828'
